tests/types/errors/safe_field_non_option.mochi
// MEP-16 R5: `?.` is only defined for option-typed receivers. Applying
// it to a bare `T` is meaningless.
type Box { value: int }
let b: Box = Box { value: 1 }
let v = b?.value
